# sg_green_buildings

./: 404.html  README.md  _config.yml  feed.xml  index.html  notes.md  pyproject.toml  robots.txt  settings.ini  sitemap.xml
2021/01/27/: sg-green-buildings.html
_action_files/: settings.ini
_fastpages_docs/: _setup_pr_template.md
_notebooks/: 2021-01-27-sg-green-buildings.ipynb  2021-04-27-plotly-port.ipynb
_posts/: 2021-01-27-sg-green-buildings.md  2021-04-27-plotly-port.md  2021-05-24-merger.md
about/: index.html
assets/css/: style.css.map
assets/js/: search-data.json  search.js
categories/: index.html
data/: list_of_building_energy_performance_data_for_2019.xlsx
jupyter/2020/02/20/: test.html
markdown/2020/01/14/: test-markdown-post.html
search/: index.html
