[tool.poetry]
name = "analysis_base"
version = "0.1.0"
description = "base package for data analysis"
authors = ["Kyle Asano <kasano@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
jupyter = "^1.0.0"
openpyxl = "^3.0.6"
pandas-profiling = "^2.10.0"
altair = "^4.1.0"
vega_datasets = "^0.9.0"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
